--- a/analiseficha.html
+++ b/analiseficha.html
@@ -141,6 +141,86 @@ body.modal-open{
   letter-spacing:-.01em;
 }
 
+/* ===== CARD PREMIUM (UPGRADE VISUAL) ===== */
+.card{
+  position:relative;
+  background:linear-gradient(180deg,#ffffff 0%, #fbfdff 100%);
+  border-radius:26px;
+  box-shadow:0 22px 60px rgba(15,23,42,.18);
+  overflow:hidden;
+  cursor:pointer;
+  transition:.25s cubic-bezier(.2,.7,.2,1);
+  border:1px solid rgba(255,255,255,.55);
+}
+
+.card::after{
+  content:"";
+  position:absolute;
+  inset:0;
+  pointer-events:none;
+  background:
+    radial-gradient(800px 240px at 0% 0%, rgba(99,102,241,.12), transparent 60%),
+    radial-gradient(800px 240px at 100% 100%, rgba(34,211,238,.10), transparent 60%);
+  mix-blend-mode:overlay;
+}
+
+.card:hover{
+  transform:translateY(-6px) scale(1.01);
+  box-shadow:0 36px 90px rgba(15,23,42,.28);
+}
+
+.card img{
+  height:260px;
+  filter:saturate(1.08) contrast(1.05);
+}
+
+/* overlay elegante na foto */
+.card::before{
+  content:"";
+  position:absolute;
+  inset:0;
+  background:
+    linear-gradient(180deg, rgba(0,0,0,.35) 0%, rgba(0,0,0,0) 38%),
+    linear-gradient(180deg, rgba(0,0,0,0) 58%, rgba(0,0,0,.45) 100%);
+  pointer-events:none;
+}
+
+/* título flutuando na foto */
+.card .title-float{
+  position:absolute;
+  left:16px;
+  right:16px;
+  bottom:140px;
+  color:#fff;
+  font-size:16px;
+  font-weight:900;
+  letter-spacing:-.01em;
+  text-shadow:0 6px 22px rgba(0,0,0,.55);
+  z-index:2;
+}
+
+/* card-body mais clean */
+.card-body{
+  padding:16px 18px 18px;
+  backdrop-filter:saturate(1.2) blur(2px);
+}
+
+/* badges mais premium */
+.badge{
+  background:rgba(238,242,255,.85);
+  color:#3730a3;
+  border:1px solid rgba(99,102,241,.25);
+  box-shadow:0 2px 8px rgba(15,23,42,.12);
+}
+
+
+
+
+
+
+
+
+   
 /* =========================================================
    BADGES
 ========================================================= */
@@ -957,7 +1037,8 @@ c.innerHTML = `
   ${p.foto_url ? `<img src="${p.foto_url}">` : ``}
   <div class="card-body">
 
-    <h3>${p.nome}</h3>
+<div class="title-float">${p.nome}</div>
+<h3>${p.nome}</h3>
 ${p.descricao ? `
   <p style="
     font-size:13px;
