--- a/analiseficha.html
+++ b/analiseficha.html
@@ -121,7 +121,7 @@ body.modal-open{
 
 .card img{
   width:100%;
-  height:280px;
+  height:160px;       /* 👈 reduz a altura */
   object-fit:cover;
   transition:.3s ease;
 }
@@ -131,7 +131,7 @@ body.modal-open{
 }
 
 .card-body{
-  padding:18px;
+  padding:12px;   /* 👈 menos espaço interno */
 }
 
 .card-body h3{
@@ -668,9 +668,9 @@ button{
 .stat{
   background:#f8fafc;
   border:1px solid var(--border);
-  border-radius:12px;
-  padding:8px 10px;
-  font-size:11px;
+  border-radius:10px;
+  padding:6px 8px;     /* 👈 menos padding */
+  font-size:10px;     /* 👈 fonte menor */
   line-height:1.1;
   box-shadow:var(--shadow-xs);
 }
