--- a/fichatecnica.html
+++ b/fichatecnica.html
@@ -323,17 +323,28 @@ button:disabled{opacity:.6;cursor:not-allowed}
     <label>TIPO DO PRATO</label>
     <select id="tipoPrato">
       <option value="">SELECIONE</option>
-      <option>PRATO PRINCIPAL</option>
-      <option>ENTRADA</option>
-      <option>HAMBURGUER</option>
-      <option>SOBREMESA</option>
-      <option>SALADA</option>
+      <option>ENTRADAS E PETISCOS</option>
+      <option>SALADAS</option>
+      <option>STEAK PRIMER</option>
+      <option>À LÁ CARTE</option>
+      <option>PARA COMPARTILHAR</option>
+      
+      <option>PRATOS KIDS</option>
+      <option>BURGUES</option>
+      <option>STEAK PRIMER</option>
+      <option>SOBREMESAS</option>
+      <option>PIZZAS GOURMET</option>
+
+      <option>PIZZAS DOCES</option>
+      <option>CALZONE</option>
+      <option>CALZONE DOCES</option>
+      <option>RECEITA</option>
+      
       <option>DRINK</option>
       <option>DRINK SEM ALCOOL</option>
       <option>SUCO</option>
       <option>SUSHI</option>
       <option>ACOMPANHAMENTO</option>
-      <option>RECEITA</option>
     </select>
   </div>
 
