--- a/fichatecnica.html
+++ b/fichatecnica.html
@@ -334,6 +334,7 @@ button:disabled{opacity:.6;cursor:not-allowed}
       <option>STEAK PRIMER</option>
       <option>SOBREMESAS</option>
       <option>PIZZAS GOURMET</option>
+      <option>MASSAS E RISOTOS</option>
 
       <option>PIZZAS DOCES</option>
       <option>CALZONE</option>
