--- a/analiseficha.html
+++ b/analiseficha.html
@@ -4,7 +4,6 @@
 <meta charset="UTF-8">
 <title>CMV • Fichas Técnicas</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="mobile-web-app-capable" content="yes">
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800&display=swap" rel="stylesheet">
 <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
@@ -1138,9 +1137,11 @@ const nutri = {
 });
 
 
-  const cmvBase = itens.reduce(
-    (s,i)=>s + Number(i.custo_calculado||0),0
-  );
+const listaItens = Array.isArray(itens) ? itens : [];
+
+const cmvBase = listaItens.reduce(
+  (s,i)=> s + Number(i?.custo_calculado || 0), 0
+);
 
   /* IMPOSTOS / CUSTOS */
   const { data: impostos } = await sb
@@ -1358,8 +1359,8 @@ ${p.preco_ideal ? `
     </tr>
   </thead>
   <tbody>
-    ${itens.map(i=>`
-      <tr>
+${(listaItens).map(i=>`
+<tr>
         <td><b>${i.nome}</b></td>
         <td>${i.quantidade}</td>
         <td>${i.unidade_uso}</td>
